Refactoring and better examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,2 @@
-find_package(Sanitizers)
-
-add_executable(test_client test_client.cpp)
-add_sanitizers(test_client)
-target_link_libraries(test_client hermes)
-
-add_executable(test_server test_server.cpp)
-#uadd_sanitizers(test_server)
-target_link_libraries(test_server hermes)
+add_subdirectory(00_hello_world)
+add_subdirectory(01_send_buffer)
