--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "externals/sanitizers-cmake"]
 	path = externals/sanitizers-cmake
-	url = https://github.com/arsenm/sanitizers-cmake.git
+    url = https://storage.bsc.es/gitlab/hpc/sanitizers-cmake
