--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "externals/sanitizers-cmake"]
-	path = externals/sanitizers-cmake
-    url = https://storage.bsc.es/gitlab/hpc/sanitizers-cmake.git
+    path = externals/sanitizers-cmake
+    url = https://github.com/bsc-ssrg/sanitizers-cmake.git
