--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "externals/sanitizers-cmake"]
 	path = externals/sanitizers-cmake
-	url = git@github.com:bsc-ssrg/sanitizers-cmake.git
+	url = https://github.com/bsc-ssrg/sanitizers-cmake.git
