Revamp CMake build scripts

--- a/examples/00_hello_world/CMakeLists.txt
+++ b/examples/00_hello_world/CMakeLists.txt
@@ -7,8 +7,14 @@ target_sources(00_hello_world_client
         rpcs.hpp
         rpcs.cpp
 )
-target_link_libraries(00_hello_world_client hermes)
+target_link_libraries(00_hello_world_client 
+    PUBLIC
+        hermes
+    PRIVATE
+        common
+)
 add_sanitizers(00_hello_world_client)
+target_compile_features(00_hello_world_client PRIVATE cxx_std_14)
 
 add_executable(00_hello_world_server "")
 target_sources(00_hello_world_server 
@@ -17,5 +23,11 @@ target_sources(00_hello_world_server
         rpcs.hpp
         rpcs.cpp
 )
-target_link_libraries(00_hello_world_server hermes)
+target_link_libraries(00_hello_world_server 
+    PUBLIC
+        hermes
+    PRIVATE
+        common
+)
 add_sanitizers(00_hello_world_server)
+target_compile_features(00_hello_world_server PRIVATE cxx_std_14)
