--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,49 +12,25 @@ endif()
 set(MASTER_PROJECT OFF)
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
   set(MASTER_PROJECT ON)
-  message(STATUS "CMake version: ${CMAKE_VERSION}")
+  message("[hermes] CMake version: ${CMAKE_VERSION}")
 endif ()
 
-
-if (NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 14)
+# set default build type and also populate a list of available options
+set(default_build_type "Release")
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+  message(STATUS "[hermes] Setting build type to '${default_build_type}' as none was specified.")
+  set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE
+      STRING "Choose the type of build." FORCE)
+  # Set the possible values of build type for cmake-gui
+  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
+    "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 endif()
 
-### # Joins arguments and places the results in ${result_var}.
-### function(join result_var)
-###   set(result )
-###   foreach (arg ${ARGN})
-###     set(result "${result}${arg}")
-###   endforeach ()
-###   set(${result_var} "${result}" PARENT_SCOPE)
-### endfunction()
-### 
-### # Set the default CMAKE_BUILD_TYPE to Release.
-### # This should be done before the project command since the latter can set
-### # CMAKE_BUILD_TYPE itself (it does so for nmake).
-### if (NOT CMAKE_BUILD_TYPE)
-###   join(doc "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or "
-###            "CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel.")
-###   set(CMAKE_BUILD_TYPE Release CACHE STRING ${doc})
-### endif ()
+# define project
+project(HERMES 
+        VERSION 0.1)
 
-include(CMakeDependentOption)
-
-# Options that control how to build
-option(HERMES_PEDANTIC "Enable extra warnings and expensive tests." OFF)
-option(HERMES_WERROR "Halt the compilation with an error on compiler warnings." OFF)
-option(HERMES_EXAMPLES "Build the examples." OFF)
-option(HERMES_LOGGING "Enable logging messages (using the fmt library)" OFF)
-cmake_dependent_option(HERMES_USE_BUNDLED_FMT "Use the fmt library bundled with hermes instead of the one installed on the system" OFF "HERMES_LOGGING" OFF)
-
-# Options that control generation of various targets.
-option(HERMES_DOC "Generate the doc target." ${MASTER_PROJECT})
-option(HERMES_INSTALL "Generate the install target." ${MASTER_PROJECT})
-option(HERMES_TEST "Generate the test target." ${MASTER_PROJECT})
-
-project(HERMES)
-
-message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+message("[hermes] Build type: ${CMAKE_BUILD_TYPE}")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
@@ -67,64 +43,60 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
 # Export compilation database
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-include(hermes_env)
-include(hermes_flags)
-
 add_library(hermes INTERFACE)
 
-if (HERMES_WERROR)
-  target_compile_options(hermes PRIVATE ${WERROR_FLAG})
-endif ()
+# building the library requires (at least) C++ 11
+target_compile_features(hermes INTERFACE cxx_std_11)
 
-if (HERMES_PEDANTIC)
-  target_compile_options(hermes INTERFACE ${PEDANTIC_COMPILE_FLAGS})
-endif ()
+include(hermes_options)
+include(hermes_flags)
 
+# set definitions and flags for debug builds
+target_compile_definitions(hermes INTERFACE 
+    $<$<CONFIG:Debug>:HERMES_DEBUG_BUILD>)
+
+target_compile_options(hermes INTERFACE 
+    $<$<CONFIG:Debug>:${HERMES_DEBUG_OPTIONS}>)
+
+# set flags common to all builds
+if(HERMES_BUILD_WERROR)
+    target_compile_options(hermes INTERFACE ${HERMES_WERROR_FLAG})
+endif()
+
+if(HERMES_BUILD_PEDANTIC)
+    target_compile_options(hermes INTERFACE ${HERMES_PEDANTIC_COMPILE_FLAGS})
+endif()
 
 target_include_directories(hermes INTERFACE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
 target_include_directories(hermes SYSTEM INTERFACE
   $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/include>)
 
-if(HERMES_EXAMPLES)
+if(HERMES_BUILD_EXAMPLES)
     add_subdirectory(examples)
 endif()
 
 # 
 find_package(Mercury REQUIRED)
+target_link_libraries(hermes INTERFACE mercury)
 
-if (HERMES_LOGGING)
-  if(HERMES_USE_BUNDLED_FMT)
-    target_compile_definitions(hermes INTERFACE HERMES_DEBUG_BUILD=1)
-    add_library(fmt_bundled INTERFACE)
-    # we cannot use target_include_directories with CMake < 3.11
-    set_target_properties(fmt_bundled
-      PROPERTIES
-      INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/externals/fmt/include"
-    )
-    target_compile_definitions(fmt_bundled INTERFACE FMT_HEADER_ONLY=1)
-    target_link_libraries(hermes INTERFACE fmt_bundled)
+if(HERMES_LOGGING)
+  target_compile_definitions(hermes INTERFACE HERMES_ENABLE_LOGGING)
+  if(HERMES_LOGGING_USE_BUNDLED_FMT)
+    message("[hermes] Logging enabled using bundled fmt")
+    target_compile_definitions(hermes INTERFACE HERMES_LOGGING_USE_BUNDLED_FMT)
+    add_subdirectory(externals/fmt)
+    target_link_libraries(hermes INTERFACE fmt::fmt-header-only)
   else()
-    find_package(fmt 5.0)
+    message("[hermes] Logging enabled using installed fmt")
+    find_package(fmt 5.3)
     if(fmt_FOUND)
-      target_compile_definitions(hermes INTERFACE HERMES_DEBUG_BUILD=1)
-      target_link_libraries(hermes INTERFACE fmt::fmt)
+      target_compile_definitions(hermes INTERFACE)
+      target_link_libraries(hermes INTERFACE fmt::fmt-header-only)
     else()
       target_compile_definitions(hermes INTERFACE)
     endif()
   endif()
 endif()
-
-set(RPC_PROTOCOL "ofi+tcp" CACHE STRING "Communication plugin used for RPCs")
-set_property(CACHE RPC_PROTOCOL PROPERTY STRINGS
-   "bmi+tcp"
-   "ofi+tcp"
-   "ofi+verbs"
-   "ofi+psm2"
-   "cci+verbs"
-)
-message(STATUS "RPC protocol: '${RPC_PROTOCOL}'")
-
-target_link_libraries(hermes INTERFACE mercury)
 
 find_package(Sanitizers)
