Improve CMake integration as external dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
   "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
-  "${CMAKE_SOURCE_DIR}/externals/sanitizers-cmake/cmake")
+  "${CMAKE_CURRENT_SOURCE_DIR}/externals/sanitizers-cmake/cmake")
 
 # Export compilation database
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -83,18 +83,36 @@ target_link_libraries(hermes INTERFACE mercury)
 if(HERMES_LOGGING)
   target_compile_definitions(hermes INTERFACE HERMES_ENABLE_LOGGING)
   if(HERMES_LOGGING_USE_BUNDLED_FMT)
-    message("[hermes] Logging enabled using bundled fmt")
     target_compile_definitions(hermes INTERFACE HERMES_LOGGING_USE_BUNDLED_FMT)
     add_subdirectory(externals/fmt)
-    target_link_libraries(hermes INTERFACE fmt::fmt-header-only)
-  else()
-    message("[hermes] Logging enabled using installed fmt")
-    find_package(fmt 5.3)
-    if(fmt_FOUND)
-      target_compile_definitions(hermes INTERFACE)
+
+    if(HERMES_LOGGING_FMT_HEADER_ONLY)
+      message("[hermes] Logging enabled using bundled fmt (header only)")
       target_link_libraries(hermes INTERFACE fmt::fmt-header-only)
     else()
-      target_compile_definitions(hermes INTERFACE)
+      message("[hermes] Logging enabled using bundled fmt (library)")
+      target_link_libraries(hermes INTERFACE fmt::fmt)
+    endif()
+  else()
+    if(TARGET fmt::fmt AND TARGET fmt::fmt-header-only)
+      if(HERMES_LOGGING_FMT_HEADER_ONLY)
+        message("[hermes] Logging enabled using external fmt (header only)")
+        target_link_libraries(hermes INTERFACE fmt::fmt-header-only)
+      else()
+        message("[hermes] Logging enabled using external fmt (library)")
+        target_link_libraries(hermes INTERFACE fmt::fmt)
+      endif()
+    else()
+      find_package(fmt 5.3 REQUIRED)
+      if(fmt_FOUND)
+        if(HERMES_LOGGING_FMT_HEADER_ONLY)
+          message("[hermes] Logging enabled using installed fmt (header only)")
+          target_link_libraries(hermes INTERFACE fmt::fmt-header-only)
+        else()
+          message("[hermes] Logging enabled using installed fmt (library)")
+          target_link_libraries(hermes INTERFACE fmt::fmt)
+        endif()
+      endif()
     endif()
   endif()
 endif()
