Allow Hermes to generate Margo-compatible RPCs
This commit adds a new HERMES_MARGO_COMPATIBLE_MODE option to CMake that
will make it generate RPCs that can be understood by Margo servers
(+v0.5.2).

Fixes #5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,4 +112,8 @@ if(HERMES_LOGGING)
   unset(HERMES_FMT_LINK_TYPE)
 endif()
 
+if(HERMES_MARGO_COMPATIBLE_RPCS)
+    target_compile_definitions(hermes INTERFACE HERMES_MARGO_COMPATIBLE_MODE)
+endif()
+
 find_package(Sanitizers)
