--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,9 @@ endif()
 
 # define project
 project(HERMES 
-        VERSION 0.1)
+        VERSION 0.4.0)
 
+message(STATUS "[hermes] Version: ${HERMES_VERSION}")
 message(STATUS "[hermes] Build type: ${CMAKE_BUILD_TYPE}")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
