--- a/examples/01_send_buffer/CMakeLists.txt
+++ b/examples/01_send_buffer/CMakeLists.txt
@@ -1,7 +1,5 @@
-find_package(Sanitizers)
-
 add_executable(01_send_buffer_client "")
-target_sources(01_send_buffer_client 
+target_sources(01_send_buffer_client
     PRIVATE
         client.cpp
         rpcs.hpp
@@ -9,27 +7,25 @@ target_sources(01_send_buffer_client
 )
 target_link_libraries(01_send_buffer_client
     PUBLIC
-        hermes
+        hermes::hermes
     PRIVATE
         common
 )
-add_sanitizers(01_send_buffer_client)
 target_compile_features(01_send_buffer_client PRIVATE cxx_std_14)
 
 add_executable(01_send_buffer_server "")
-target_sources(01_send_buffer_server 
+target_sources(01_send_buffer_server
     PRIVATE
         server.cpp
         rpcs.hpp
         rpcs.cpp
 )
-target_link_libraries(01_send_buffer_server 
+target_link_libraries(01_send_buffer_server
     PUBLIC
-        hermes
+        hermes::hermes
     PRIVATE
         common
 )
-add_sanitizers(01_send_buffer_server)
 target_compile_features(01_send_buffer_server PRIVATE cxx_std_14)
 
 add_custom_command(
