--- a/examples/common/CMakeLists.txt
+++ b/examples/common/CMakeLists.txt
@@ -10,4 +10,4 @@ target_include_directories(common
 )
 
 target_compile_features(common PRIVATE cxx_std_14)
-target_link_libraries(common PRIVATE hermes)
+target_link_libraries(common PRIVATE hermes::hermes)
